--- a/style.css
+++ b/style.css
@@ -189,6 +189,70 @@ main{
 
 
  }
+
+ dialog{
+    background-color:rgb(14,14,14) ;
+    border: 4px solid hsl(36, 67%, 52%);
+    height: 50vh;
+    width: 50vw;
+    display: flex;
+    border-radius: 20px;
+    padding: 2rem;
+    
+   
+
+ }
+
+ .book-display{
+   width:40%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.80;
+   
+ }
+
+ form{
+    width: 60%;
+    padding-left: 1.5rem;
+    padding-top: 4rem;
+ }
+
+ #add-book{
+    border: 0;
+    border-radius: 10px;
+    height: 40px;
+    width: 80px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color:hsl(36, 67%, 52%) ;
+    margin-top: 1rem;
+    color: white;
+ }
+  input{
+    padding-left: 5px;
+    height: 1.5rem;
+  }
+label{
+   padding-top:30px ;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif Verdana, sans-serif;
+    color: hsl(36, 67%, 52%);
+}
+
+button.close{
+    color: white;
+    background-color: hsl(36, 67%, 48%);
+    border: 0;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+   position: relative;
+    left: 55%;
+}
+dialog::backdrop{
+    background-color: rgb(14,14,14);
+    height: 100vh;
+}
 /* 
  .modal{
     height:20vh ;
