--- a/style.css
+++ b/style.css
@@ -13,10 +13,7 @@ body{
      letter-spacing: 3px;
      font-size:1.5rem;
      justify-content: space-between;
-     align-items: center;
-
-
-    
+     align-items: center;   
 }
 
 header{
@@ -25,11 +22,12 @@ header{
     justify-content: space-between;
     padding: 1rem;
     width: 100vw
-
 }
+
 nav{
     width: 50%;
 }
+
 nav ul{
     display: flex;
     justify-content: space-around;
@@ -40,20 +38,23 @@ nav ul{
     width: 50%;
     display: flex;
 }
+
 input{
     border:2px solid rgb(214, 148, 49);
     border-radius: 12px;
     width: 90%;
 }
+
 h1{
     text-align: start;
-    margin-left: 1rem;
-   
+    margin-left: 1rem; 
 }
+
 nav button{
     background-color: hsl(54, 54%, 92%);
     border:2px solid hsl(36, 67%, 52%);
 }
+
 main>h1{
     text-align: center;
     color: rgb(214, 148, 49);
@@ -61,6 +62,7 @@ main>h1{
      letter-spacing: 3px;
      font-size: 3rem;
 }
+
 #textbooks,#drama,#history,#poetry,#fiction,#fantasy,#sci-fi{
     width: 70vw;
     height: min(25vh,15rem);
@@ -70,23 +72,23 @@ main>h1{
     display: grid;
     grid-template:1fr .5fr/ 1fr;
 }
-#textbooks{
-    
-    background: url("images/science.jpg") ;
-    
+
+#textbooks{ 
+    background: url("images/science.jpg") ;   
 }
-#drama{
-    
+
+#drama{ 
     background: url("images/akelex-one-final-repentance.jpg") ;
 }
+
 #history{
-    
     background: url("images/history.jpg") ;
 }
+
 #poetry{
-    
     background: url("images/poetry.jpg") ;
 }
+
 #fiction{
     
     background: url("images/fiction.jpg") ;
@@ -229,10 +231,12 @@ main{
     margin-top: 1rem;
     color: white;
  }
+
   input{
     padding-left: 5px;
     height: 1.5rem;
   }
+
 label{
    padding-top:30px ;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif Verdana, sans-serif;
@@ -249,12 +253,16 @@ button.close{
    position: relative;
     left: 55%;
 }
-dialog::backdrop{
-    background-color: rgb(14,14,14);
-    height: 100vh;
+
+.banner{
+    height: 20%;
+    width: 100vw;
+    border: 1px solid black;
 }
-/* 
- .modal{
-    height:20vh ;
-    width: ;
- } */
+.banner img{
+    width: 100vw;
+}
+.book-shelf{
+    height: auto;
+    background-color: hsl(54, 54%, 92%);
+}
