--- a/style.css
+++ b/style.css
@@ -232,6 +232,10 @@ main{
     padding-left: 5px;
     height: 1.5rem;
   }
+  input#file{
+    padding-left: 5px;
+    height: 1.5rem;
+  }
 
 label{
    padding-top:30px ;
